--- a/package.json
+++ b/package.json
@@ -12,8 +12,10 @@
     "babel-core": "^6.26.3",
     "babel-preset-env": "^1.7.0",
     "babel-preset-react": "^6.24.1",
-    "react": "^16.4.1",
-    "react-dom": "^16.4.1",
+    "ejsx": "^1.0.0-b2",
+    "lodash": "^4.17.10",
+    "react": "^16.4.2",
+    "react-dom": "^16.4.2",
     "superagent": "^3.8.3"
   }
 }
