--- a/package.json
+++ b/package.json
@@ -17,12 +17,13 @@
     "ejsx": "^1.0.0-b2",
     "helpers": "0.0.6",
     "humps": "^2.0.1",
-    "lodash": "^4.17.10",
+    "json-api-normalizer": "^0.4.11",
+    "lodash": "^4.17.11",
     "popper.js": "^1.14.4",
     "prop-types": "^15.6.2",
     "qs": "^6.5.2",
     "react": "^16.4.2",
-    "react-dom": "^16.4.2",
+    "react-dom": "^16.5.1",
     "react-router": "^4.3.1",
     "react-router-dom": "^4.3.1",
     "reactstrap": "^6.4.0",
