--- a/package.json
+++ b/package.json
@@ -19,10 +19,11 @@
     "humps": "^2.0.1",
     "json-api-normalizer": "^0.4.11",
     "lodash": "^4.17.11",
+    "parcel": "^1.9.7",
     "popper.js": "^1.14.4",
     "prop-types": "^15.6.2",
     "qs": "^6.5.2",
-    "react": "^16.4.2",
+    "react": "^16.5.2",
     "react-dom": "^16.5.2",
     "react-router": "^4.3.1",
     "react-router-dom": "^4.3.1",
