--- a/package.json
+++ b/package.json
@@ -14,10 +14,12 @@
     "babel-preset-env": "^1.7.0",
     "babel-preset-react": "^6.24.1",
     "bootstrap": "^4.1.3",
+    "constants": "0.0.2",
     "ejsx": "^1.0.0-b2",
     "helpers": "0.0.6",
     "humps": "^2.0.1",
     "json-api-normalizer": "^0.4.11",
+    "jsonapi-parse": "^2.0.0",
     "lodash": "^4.17.11",
     "parcel": "^1.9.7",
     "popper.js": "^1.14.4",
@@ -25,9 +27,14 @@
     "qs": "^6.5.2",
     "react": "^16.5.2",
     "react-dom": "^16.5.2",
+    "react-redux": "^5.0.7",
     "react-router": "^4.3.1",
     "react-router-dom": "^4.3.1",
     "reactstrap": "^6.4.0",
+    "redux": "^4.0.0",
+    "redux-devtools-extension": "^2.13.5",
+    "redux-thunk": "^2.3.0",
+    "store": "^2.0.12",
     "superagent": "^3.8.3"
   }
 }
